--- a/Site1.Master
+++ b/Site1.Master
@@ -40,9 +40,9 @@
                 </button>
 
                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ">
+                    <ul class="navbar-nav" style="font-size: 24px; font-family: Arial;">
                         <li class="nav-item active ml-5">
-                            <a class="nav-link" href="Home.aspx">الرئيسية</a>
+                            <a class="nav-link"" href="Home.aspx">الرئيسية</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link ml-5" href="#devices">التقنيات</a>
