--- a/customizedCSS/StyleSheet1.css
+++ b/customizedCSS/StyleSheet1.css
@@ -37,7 +37,7 @@
 }
 
 a:hover {
-    background-color: yellow;
+    color: darkmagenta;
 }
 
 
@@ -47,4 +47,35 @@ a:hover {
     flex-wrap:wrap;
     justify-content:flex-start;
 
+}
+
+/* Container holding the image and the text */
+.container {
+    position: relative;
+    padding: 50px;
+}
+
+.text-block-left {
+    position: absolute;
+    top: 50%;
+    right: 20%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.4);
+    color: white;
+    padding: 50px;
+}
+.text-block-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background: rgba(0, 0, 0, 0.4);
+    padding: 50px;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
