--- a/Site1.Master
+++ b/Site1.Master
@@ -55,6 +55,8 @@
                         </li>
 
                     </ul>
+
+                      
                      <%--
                     <ul class="navbar-nav">
                         <li class="nav-item active">
@@ -81,7 +83,7 @@
                      
 
                     
-                       
+                 </div> 
                      
 
                      <div class="collapse navbar-collapse  icon" >
