--- a/customizedCSS/FormsStyle.css
+++ b/customizedCSS/FormsStyle.css
@@ -1,117 +1,171 @@
-﻿html,
-body {
-    position: relative;
-    height: 100%;
+﻿table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 70%;
+    table-layout: fixed
 }
 
-body {
-    background: #eee;
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    color: #000;
-    margin: 0;
+td, th {
+    border: 1px solid #cae8ca;
+    text-align: center;
+    padding: 8px;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+label {
+    display: inline-block;
+    text-align: center;
+}
+
+hr {
+    width: 50%;
+    margin: 0 auto;
+    height: 1px;
+    background-color: grey;
+}
+
+html, body {
+    min-height: 100%;
+}
+center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+label {
+    display: inline-block;
+    text-align: center;
+}
+
+
+body, form3, input, select {
     padding: 0;
+    margin: 0;
+    outline: none;
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 14px;
+    color: black;
 }
 
 h1 {
-    margin-right: 100px;
-}
-
-.swiper {
-    width: 100%;
-    height: 100%;
-}
-
-.swiper-slide {
+    font-family: Roboto, Arial, sans-serif;
     text-align: center;
-    font-size: 18px;
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
+    margin: 0;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    font-weight: 400;
+    font-size: 50px;
+    color: #fff;
+}
+
+h3 {
+    margin: 12px 0;
+    color: #8ebf42;
+}
+
+.main-block {
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
+    width: 60%;
+    position: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
     align-items: center;
-}
-
-    .swiper-slide img {
-        display: block;
-        width: 100%;
-        border-radius: 10px 10px 0 0;
-        object-fit: cover;
-    }
-
-.swiper {
-    width: 100%;
-    height: 80%;
-    margin: 20px auto;
-}
-.swiper-container {
-    width: 100%;
-    height: 300px;
-    margin: 20px auto;
-}
-
-.append-buttons {
-    text-align: center;
-    margin-top: 20px;
-}
-
-    .append-buttons button {
-        display: inline-block;
-        cursor: pointer;
-        border: 1px solid #007aff;
-        color: #007aff;
-        text-decoration: none;
-        padding: 4px 10px;
-        border-radius: 4px;
-        margin: 0 10px;
-        font-size: 13px;
-    }
-
-.card {
-    width: 20rem;
-    height: 30rem;
-    border-radius: 10px;
-    border: none;
-    box-shadow: 10px 4px 10px rgb(160, 156, 156);
     background: #fff;
 }
 
-
-.card-body {
-    text-align: center;
-    padding-top: 40px;
+form3 {
+    place-items: center;
+    display: inline;
+    padding: 20px;
+    width: 55%;
 }
 
-
-.card-content {
-    position: center;
-    justify-content: center;
-}
-
-
-.image-content,
-.card-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-
-.image-content {
+fieldset {
+    margin: auto;
+    font-family: Roboto, Arial, sans-serif;
     position: relative;
-    row-gap: 5px;
-    height: 60%;
-    background-size: cover;
-    background-position: center;
-    border-radius: 20px 20px 0 20px;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    background-color: white;
+    border-radius: 20px;
+    vertical-align: central;
+    border: none;
+    box-shadow: 10px 4px 10px rgb(108, 108, 108);
+    padding: 20px 30px 40px 0px;
+}
+
+personal-details {
+    display: inline;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 7px;
+    width: 50%;
 }
 
 
+input, label {
+    font-size: 25px;
+    margin-bottom: 26px;
+    margin: auto;
+}
+
+label {
+    margin: 10px 0;
+    width: 35%;
+    padding: 0 5px;
+    text-align: right;
+    vertical-align: middle;
+}
+
+input {
+    margin: 10px 0;
+    width: 50%;
+    padding: 5px;
+    vertical-align: middle;
+}
+
+select {
+    padding: 8px 5px 8px 5px;
+    width: calc(47% + 15px);
+    background: transparent;
+}
+
+
+button {
+    position: center;
+    width: 20%;
+    padding: 10px 24px;
+    margin: 10px auto;
+    border-radius: 4px;
+    border: none;
+    background: #569c5a;
+    font-size: 18px;
+    font-weight: 600;
+    color: #fff;
+    margin-left: 70px;
+    margin-right: 70px;
+}
+
+    button:hover {
+        background: #326041;
+    }
+
+span2 {
+    position: absolute;
+    left: 150px;
+    width: 150px;
+    height: 120px;
+    margin-right: -16px;
+    font-size: 20px;
+}
+
+@media (min-width: 568px) {
+    .account-details > div, .personal-details > div {
+        width: 70%;
+    }
+}
