changed the design of about us section

--- a/customizedCSS/StyleSheet1.css
+++ b/customizedCSS/StyleSheet1.css
@@ -71,7 +71,7 @@ a:hover {
     top: auto;
     right:5%;
     background: transparent;
-    color: white;
+    color: gray;
     padding: 35px;
 }
 
