--- a/customizedCSS/RawanStyle.css
+++ b/customizedCSS/RawanStyle.css
@@ -128,6 +128,12 @@ h1 {
     border: none;
     cursor: pointer;
     border-radius: 5px;
+    text-align: center;
+    display: inline-block;
+    text-rendering: auto;
+    letter-spacing: normal;
+    word-spacing: normal;
+    align-items: flex-start;
 }
 
     .cardButtons:hover {
