--- a/customizedCSS/StyleSheet1.css
+++ b/customizedCSS/StyleSheet1.css
@@ -28,7 +28,7 @@
     width: 300px;
     height: 300px;
     padding-top: 3rem;
-    paddding-bottom: 3rem;
+    padding-bottom: 3rem;
     padding-right: 2rem;
     padding-left: 2rem;
     font-size:15px;
