Revert "Merge pull request #7 from slrftm/Laila"
This reverts commit fdf14f0979ed799794144c9e977de4327f735078, reversing
changes made to 243cd78d3562b8f88efaf82ba7ac27ba9b9c77c9.

--- a/Site1.Master
+++ b/Site1.Master
@@ -26,6 +26,7 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
+    <form id="form1" runat="server">
      <%--Navbr Start--%>
         <div>
             <%--Top Right Logo--%>
@@ -149,6 +150,7 @@
         </footer>
         <!-- Footer End-->
 
+    </form>
 </body>
 </html>
 
