--- a/customizedCSS/StyleSheet1.css
+++ b/customizedCSS/StyleSheet1.css
@@ -28,7 +28,7 @@
     width: 300px;
     height: 300px;
     padding-top: 3rem;
-    padding-bottom: 3rem;
+    paddding-bottom: 3rem;
     padding-right: 2rem;
     padding-left: 2rem;
     font-size:15px;
@@ -56,39 +56,24 @@ a:hover {
     padding: 50px;
 }
 
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-.clearfix {
-    overflow:auto;
-}
-
 .text-block-left {
     position: absolute;
-    top: 30%;
-    right: 45%;
+    top: 50%;
+    right: 25%;
+    transform: translate(-50%, -50%);
     background: rgba(0, 0, 0, 0.4);
     color: white;
-    padding: 1%;
-    width: 40%;
-    height: 37%;
-    overflow:auto;
+    padding: 35px;
 }
 
 .text-block-right {
     position: absolute;
     left: 45%;
     top: auto;
-    right: 8%;
+    right:5%;
     background: transparent;
     color: gray;
-    padding: 10px;
-    overflow: auto;
-    height: 60%;
-    width: 45%;
+    padding: 35px;
 }
 
 .text-block-center {
@@ -141,44 +126,23 @@ hr.dashed {
     color: white;
 }
 
-.buttonHP {
-    font-size: 1.2rem;
-    border-color: transparent;
-}
-
 /* Responsive text */
 /* If the screen size is 1200px wide or more, set the font-size to 80px */
-@media (min-width: 600px) {
+@media (min-width: 1200px) {
     .responsiveText{
         font-size: 80px;
     }
 }
 /* If the screen size is smaller than 1200px, set the font-size to 80px */
-@media (max-width: 600px) {
+@media (max-width: 1199.98px) {
     .responsiveText {
-        font-size: 20px;
+        font-size: 30px;
     }
 }
 
 .forMore:hover{
     text-decoration: underline;
 }
-
-
-.plusMinus:hover {
-    box-shadow: 0px 0px 21px 10px #cae8ca;
-    background-image: radial-gradient(white 40%, #cae8cac2, #cfe7cfc7);
-    color: #447232;
-}
-
-.deviceInfo {
-    font-size: 18px;
-    width: 80%; 
-    margin-right: 50px; 
-    background-color: #cae8ca; 
-    border-radius:10px; 
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
-    padding: 15px;
 
 .dotHomeHeader {
     height: 80px;
@@ -217,6 +181,5 @@ personal-details {
     align-items: center;
     margin-bottom: 7px;
     width: 50%;
-
 
 }
