--- a/Site1.Master
+++ b/Site1.Master
@@ -26,7 +26,7 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form id="form1" runat="server">
+    
      <%--Navbr Start--%>
         <div>
             <%--Top Right Logo--%>
@@ -83,7 +83,7 @@
 
                       <%--Search Bar Start--%>
                       <div class=" d-none d-lg-block mb-1 ">
-                          <form action="">
+                         
                               <div class="input-group" style="border-radius: 15px;">
                                   <div class="input-group-append">
                                       <span class="input-group-text bg-transperant text-primary" style="border-radius: 1px 15px 15px 1px; cursor: pointer;" onClick="">
@@ -92,12 +92,12 @@
                                   </div>
                                   <input type="text" class="form-control" style="border-radius: 15px 1px 1px 15px" placeholder="بحث...">
                               </div>
-                          </form>
+                          
                       </div>
                       <%--My Account Icon --%>
                       <ul class="navbar-nav">
                           <li class="nav-item active">
-                              <a href="" class="btn">
+                              <a href="#" class="btn">
                                   <i class="fas fa-user-alt fa-xl "></i>
                               </a>
                           </li>
@@ -120,12 +120,12 @@
                 <div class="b pt"> 
                     <h5 class="text-dark">العنوان</h5>
                      <div class="d-flex d-inline mt-3">
-                        <p class="mb-2">
+                        <div class="mb-2">
                             <i class="fa fa-map-marker-alt text-primary  "></i>
                             <p class="mr-3 d-flex d-inline">جامعة الملك عبدالعزيز عمادة التعلم الإلكتروني والتعليم عن بعد مبنى 66 الدور الثالث غرفة 452</p>
-                        </p>
+                        </div>
                      </div>
-                        
+                     </div>   
                 </div>
                 <!--contact as-->
                 <div class="b  " id="contact"> 
@@ -150,6 +150,6 @@
         </footer>
         <!-- Footer End-->
 
-    </form>
+    
 </body>
 </html>
