--- a/Site1.Master
+++ b/Site1.Master
@@ -26,11 +26,11 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form id="form1" runat="server">
-     <%--Navbr Start--%>
+    <form runat="server">
+ <%--Navbr Start--%>
         <div>
             <%--Top Right Logo--%>
-              <nav class="navbar navbar-expand-lg navbar-light bcolor">
+              <nav class="navbar navbar-expand-lg bcolor">
                 <a class="navbar-brand" href="Home.aspx">
                     <img src="img/LOGO.png" width="120" height="80" />
                 </a>
@@ -42,71 +42,42 @@
                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav" style="font-size: 24px; font-family: Arial;">
                         <li class="nav-item active ml-5">
-                            <a class="nav-link"" href="Home.aspx">الرئيسية</a>
+                            <a class="headerM" href="Home.aspx">الرئيسية</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link ml-5" href="Devices.aspx">التقنيات</a>
+                            <a class="ml-5 headerM" href="Devices.aspx">التقنيات</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link ml-5" href="AboutUs.aspx">نبذه عنا</a>
+                            <a class="ml-5 headerM" href="AboutUs.aspx">نبذه عنا</a>
                         </li>
                         <li class="nav-item active ml-5">
-                            <a class="nav-link" href="#contact">تواصل معنا</a>
+                            <a class="headerM" href="#contact">تواصل معنا</a>
                         </li>
 
                     </ul>
                      </div>
-                     <%--
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton4" runat="server">View Books</asp:LinkButton>
-                        </li>
-                        
-                        <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton1" runat="server">User Login</asp:LinkButton>
-                        </li>
-                        <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton2" runat="server">Sign Up</asp:LinkButton>
-                        </li>
-                        <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton3" runat="server">Logout</asp:LinkButton>
-                        </li>
 
-                        <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton7" runat="server">Hello user</asp:LinkButton>
-
-                        </li>
-                    </ul>
-                         --%>
-
-                  <div class="collapse navbar-collapse  icon">
-
-                      <%--Search Bar Start--%>
-                      <div class=" d-none d-lg-block mb-1 ">
-                         
-                              <div class="input-group" style="border-radius: 15px;">
-                                  <div class="input-group-append">
-                                      <span class="input-group-text bg-transperant text-primary" style="border-radius: 1px 15px 15px 1px; cursor: pointer;" onClick="">
-                                          <i class="fa fa-search iconbg"></i>
-                                      </span>
-                                  </div>
-                                  <input type="text" class="form-control" style="border-radius: 15px 1px 1px 15px" placeholder="بحث...">
-                              </div>
-                          
-                      </div>
                       <%--My Account Icon --%>
-                      <ul class="navbar-nav">
-                          <li class="nav-item active">
-                              <a href="Login.aspx" class="btn">
-                                  <i class="fas fa-user-alt fa-xl "></i>
-                              </a>
-                          </li>
-                      </ul>
+                  <div class="collapse navbar-collapse icon ml-4" dir="rtl">
+                      <div class=" d-none d-lg-block mb-1 ml-3">
+ <asp:Linkbutton runat="server" ID="welcome" Visible="False" style="font-size: 24px; color: black; text-decoration: none; cursor: default;">Hello User</asp:Linkbutton>
+                      </div>
+                      <div class=" d-none d-lg-block mb-1 mr-2 ml-2">
+                          <div id="DDM" class="dropdown">
+                              <asp:Linkbutton ID="ACCIcon" OnClick="ACCIcon_Click" runat="server" class="dropbtn headerM">
+                                  <i class="fas fa-user-alt fa-2x"></i>
+                              </asp:Linkbutton>
+                              <div class="dropdown-content">
+                                  <asp:LinkButton ID="ProfileB" OnClick="ProfileB_Click" runat="server" Visible="False" style="font-size: 18px">الحساب الشخصي</asp:LinkButton>
+                                  <asp:LinkButton ID="LogoutB" OnClick="LogoutB_Click" runat="server" Visible="False" style="font-size: 18px">تسجيل الخروج</asp:LinkButton>
+                              </div>
+                          </div>
+                          </div>
                   </div>
             </nav>
         </div>
         <%--Navbr End--%>
-
+    
         <!-- Main Content Placeholder start -->
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
@@ -149,8 +120,6 @@
             
         </footer>
         <!-- Footer End-->
-
-    </form>
+        </form>
 </body>
 </html>
-
