--- a/Site2.Master
+++ b/Site2.Master
@@ -1,130 +1,138 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site2.master.cs" Inherits="ILD.Site2" %>
 
+
 <!DOCTYPE html>
 
 <html lang="ar" dir="rtl">
-<head runat="server">
-    <title></title>
-    <link href="customizedCSS/test.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
-</head>
-<body>
-    <form id="form1" runat="server">
-        
-        <div class="container-fluid">
-    <div class="row flex-nowrap">
-        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
-            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <span class="fs-5 d-none d-sm-inline">Menu</span>
-                </a>
-                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link align-middle px-0">
-                            <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span> </a>
-                        <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1 </a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2 </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Orders</span></a>
-                    </li>
-                    <li>
-                        <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
-                            <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a>
-                        <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Products</span> </a>
-                            <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 1</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 4</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Customers</span> </a>
-                    </li>
-                </ul>
-                <hr>
-                <div class="dropdown pb-4">
-                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle">
-                        <span class="d-none d-sm-inline mx-1">loser</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-                        <li><a class="dropdown-item" href="#">New project...</a></li>
-                        <li><a class="dropdown-item" href="#">Settings</a></li>
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Sign out</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col py-3">
-            <h3>Left Sidebar with Submenus</h3>
-            <p class="lead">
-                An example 2-level sidebar with collasible menu items. The menu functions like an "accordion" where only a single 
-                menu is be open at a time. While the sidebar itself is not toggle-able, it does responsively shrink in width on smaller screens.</p>
-            <ul class="list-unstyled">
-                <li><h5>Responsive</h5> shrinks in width, hides text labels and collapses to icons only on mobile</li>
-            </ul>
-        </div>
-    </div>
-</div>
-           <%-- <div class="container-fluid wrapper">
-                <div class="d-flex row">
-                    <div class="col-md-3 bg-dark">
-                       1
 
-                    </div>
 
-                    <div class="col-md-9 bg-danger">
-                        2
-                    </div>
+    <head runat="server">
+        <title>Admin</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
 
-                </div>
+        <!-- Bootstrap CSS CDN -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+        <!-- Our Custom CSS -->
+        <link href="customizedCSS/style.css" rel="stylesheet" />
 
-            </div>--%>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+        <!-- Font Awesome JS -->
+        <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+         
+            <asp:ContentPlaceHolder ID="head" runat="server">
             </asp:ContentPlaceHolder>
-        
-    </form>
+    </head>
+    
+    
+ 
+      <body>
+      <form runat="server">
+    
+        <!-- Sidebar  -->
+        <div class="row">
+            <div class="col-md-3">
+                <nav id="sidebar">
 
+                    <a class="navbar-brand ml-5 " href="Home.aspx">
+                            <img class="text-center" src="img/LOGO.png" width="120" height="80" />
+                      </a>
+                    <%--My Account Icon --%>
+                  <div class="collapse navbar-collapse icon ml-4" dir="rtl">
+                      <div class=" d-none d-lg-block mb-1 ml-3">
+ <asp:Linkbutton runat="server" ID="welcome" Visible="False" style="font-size: 24px; color: black; text-decoration: none; cursor: default;">Hello User</asp:Linkbutton>
+                      </div>
+                      <div class=" d-none d-lg-block mb-1 mr-2 ml-2">
+                          <div id="DDM" class="dropdown">
+                              <asp:Linkbutton ID="ACCIcon" OnClick="ACCIcon_Click" runat="server" class="dropbtn headerM">
+                                  <i class="fas fa-user-alt fa-2x"></i>
+                              </asp:Linkbutton>
+                              <div class="dropdown-content">
+                                  <asp:LinkButton ID="ProfileB" OnClick="ProfileB_Click" runat="server" Visible="False" style="font-size: 18px">الحساب الشخصي</asp:LinkButton>
+                                  <asp:LinkButton ID="LogoutB" OnClick="LogoutB_Click" runat="server" Visible="False" style="font-size: 18px">تسجيل الخروج</asp:LinkButton>
+                              </div>
+                          </div>
+                          </div>
+                  </div>
+                 
+                    
+            <ul class="list-unstyled components">
+
+                <li class="active text-center">
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">إدارة الطلبات</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenu"> 
+                        <li><a href="ComingRequests.aspx">الطلبات الواردة</a></li>
+                        <li><a href="currentOrders.aspx">الطلبات الحالية</a></li>
+                    </ul>
+
+                </li>
+
+                <li class="active text-center"><a class="text-center" href="DevicesMangement.aspx">إدارة الأجهزة</a></li>
+
+                <li class="active text-center">
+                    <a href="#adminSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle ">إدارة المشرفيين</a>
+                    <ul class="collapse list-unstyled" id="adminSubmenu">
+                        <li> <a href="View_Admins.aspx">إستعراض المشرفين</a></li>
+                        <li> <a href="NewAdmin.aspx">إضافة المشرفين</a></li>
+                    </ul>
+                </li> 
+
+                <li class="active text-center">
+                    <a href="#reportSubmenu" data-toggle="collapse" aria-expanded="false" class=" dropdown-toggle ">التقارير</a>
+                    <ul class="collapse list-unstyled" id="reportSubmenu">
+                        <li><a href="Requests_Reports.aspx">تقارير الطلبات</a></li>
+                        <li><a href="DeviceReports.aspx">تقارير الأجهزة</a> </li>
+                    </ul>
+                </li>
+
+                
+                <li class=" text-center">
+                    <a href="AdminProfile.aspx" >المعلومات الشخصية</a>
+                </li>
+               
+            </ul>
+
+          
+        </nav>
+        </div>
+           <div class="col-md-9 mt-5 ">
+                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+             </asp:ContentPlaceHolder>
+
+           </div>
+        </div >    
+        
+          <!-- Page Content  -->
+           
+          
+        
+        
+
+           
+    
+ 
+
+    <!-- jQuery CDN - Slim version (=without AJAX) -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- Popper.JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').toggleClass('active');
+            });
+        });
+    </script>
+          
+</form>
 </body>
 </html>
+
+  
+             
+              
+    
