--- a/customizedCSS/FormsStyle.css
+++ b/customizedCSS/FormsStyle.css
@@ -1,49 +1,17 @@
-﻿table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 70%;
-    table-layout: fixed
-}
-
-td, th {
-    border: 1px solid #cae8ca;
-    text-align: center;
-    padding: 8px;
-}
-
-.center {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-label {
+﻿label {
     display: inline-block;
     text-align: center;
 }
 
-hr {
-    width: 50%;
-    margin: 0 auto;
-    height: 1px;
-    background-color: grey;
-}
+
 
 html, body {
     min-height: 100%;
 }
 
-center {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-label {
-    display: inline-block;
-    text-align: center;
-}
 
 
-body, form3, input, select {
+body, input, select {
     padding: 0;
     margin: 0;
     outline: none;
@@ -53,45 +21,6 @@ body, form3, input, select {
 }
 
 
-
-h3 {
-    margin: 12px 0;
-    color: #8ebf42;
-}
-
-.main-block {
-    display: flex;
-    width: 60%;
-    position: center;
-    justify-content: center;
-    align-items: center;
-    background: #fff;
-}
-
-
-
-fieldset {
-    margin: auto;
-    font-family: Roboto, Arial, sans-serif;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    border-radius: 20px;
-    vertical-align: central;
-    border: none;
-    box-shadow: 10px 4px 10px rgb(108, 108, 108);
-    padding: 20px 30px 40px 0px;
-}
-
-.personal-details {
-    display: inline;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 7px;
-    width: 50%;
-}
 
 
 input, label {
@@ -115,42 +44,21 @@ input {
     vertical-align: middle;
 }
 
-select {
-    padding: 8px 5px 8px 5px;
-    width: calc(47% + 15px);
-    background: transparent;
-}
 
-
-button {
-    position: center;
-    padding: 10px 24px;
-    margin: 10px auto;
-    border-radius: 4px;
-    border: none;
-    background: #569c5a;
-    font-size: 18px;
-    font-weight: 600;
-    color: #fff;
-    margin-left: 70px;
-    margin-right: 70px;
-}
 
     button:hover {
         background: #326041;
     }
 
-span2 {
-    position: absolute;
-    left: 150px;
-    width: 150px;
-    height: 120px;
-    margin-right: -16px;
-    font-size: 20px;
-}
 
 @media (min-width: 568px) {
     .account-details > div, .personal-details > div {
         width: 70%;
     }
+}
+
+.x {
+    border: none;
+    box-shadow: 10px 4px 10px rgb(186, 180, 180);
+    border-radius: 20px;
 }
