--- a/customizedCSS/sideNav.css
+++ b/customizedCSS/sideNav.css
@@ -6,6 +6,7 @@
     right: 0;
     overflow-x: hidden;
     padding-top: 20px;
+    background-color:aquamarine;
 }
 
     /* Style the sidenav links and the dropdown button */
