--- a/Site2.Master
+++ b/Site2.Master
@@ -7,7 +7,7 @@
 
 
     <head runat="server">
-        <title>Admin</title>
+        <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
