--- a/customizedCSS/AdminPages.css
+++ b/customizedCSS/AdminPages.css
@@ -1,10 +1,4 @@
-﻿.box {
-    background-color: white;
-    border-radius: 20px;
-    border: none;
-    box-shadow: 10px 4px 10px rgb(108, 108, 108);
-    padding: 20px 30px 40px 0px;
-}
+﻿
 
 
 .tableContainer {
@@ -22,145 +16,4 @@
     display: flex;
     width: 100%;
 }
-/*
-#sidebar {
-    width: 250px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    z-index: 999;
-    background: #7386D5;
-    color: #fff;
-    transition: all 0.3s;
-}
-sidenav a, .dropdown-btn {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 20px;
-    color: black;
-    display: block;
-    border: none;
-    background: none;
-    width: 100%;
-    text-align: right;
-    cursor: pointer;
-    outline: none;
-}
 
-.sidenav {
-    height: 75%;
-    width: 0;
-    position: sticky;
-    z-index: 1;
-    right: 0;
-    background-color: #F6FBF4;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-}
-
-    .sidenav a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 20px;
-        color: black;
-        display: block;
-        transition: 0.3s;
-    }
-
-        .sidenav a:hover {
-            color: #f1f1f1;
-        }
-
-    .sidenav .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 30px;
-        margin-left: 50px;
-    }
-
-#main {
-    transition: margin-left .5s;
-    padding: 16px;
-}
-
-@media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
-
-        .sidenav a {
-            font-size: 18px;
-        }
-}
-
-.box {
-    background-color: white;
-    border-radius: 20px;
-    border: none;
-    box-shadow: 10px 4px 10px rgb(108, 108, 108);
-    padding: 20px 30px 40px 0px;
-}
-
-.innerFont {
-    font-size: 15px;
-    */
-.sidenav {
-    height: 60%;
-    width: 300px;
-    position: fixed;
-    z-index: 1;
-    right: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-}
-
-    /* Style the sidenav links and the dropdown button */
-    .sidenav a, .dropdown-btn {
-        padding: 6px 8px 6px 16px;
-        text-decoration: none;
-        font-size: 20px;
-        color: #818181;
-        display: block;
-        border: none;
-        background: none;
-        width: 100%;
-        text-align: left;
-        cursor: pointer;
-        outline: none;
-        text-align: right;
-        margin-right: 1%;
-    }
-
-        /* On mouse-over */
-        .sidenav a:hover, .dropdown-btn:hover {
-            color: #f1f1f1;
-        }
-
-/* Main content */
-.main {
-    margin-left: 200px; /* Same as the width of the sidenav */
-    font-size: 20px; /* Increased text to enable scrolling */
-    padding: 0px 10px;
-}
-
-/* Add an active class to the active dropdown button */
-.active {
-    background-color: green;
-    color: white;
-}
-
-/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-.dropdown-container {
-    display: none;
-    background-color: #262626;
-    padding-left: 8px;
-}
-
-/* Optional: Style the caret down icon */
-.fa-caret-down {
-    float: right;
-    padding-right: 8px;
-}
